<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#162B56">

    <TextView
        android:id="@+id/title3"
        android:layout_width="141dp"
        android:layout_height="63dp"
        android:layout_marginTop="56dp"
        android:text="@string/accregister"
        android:textAlignment="center"
        android:textColor="#FDA311"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/Title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#E5E5E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_passInput"
        app:layout_constraintTop_toBottomOf="@+id/register_passInput" />

    <TextView
        android:id="@+id/register_name"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textAlignment="viewStart"
        android:textColor="#FFE5E5E5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_nameInput"
        app:layout_constraintStart_toStartOf="@+id/register_password" />

    <EditText
        android:id="@+id/register_passInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#E5E5E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_unameInput"
        app:layout_constraintTop_toBottomOf="@+id/register_unameInput" />

    <TextView
        android:id="@+id/register_password"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textAlignment="viewStart"
        android:textColor="#FFE5E5E5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_passInput"
        app:layout_constraintStart_toStartOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_unameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#E5E5E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/register_username"
        app:layout_constraintTop_toBottomOf="@+id/instruct" />

    <TextView
        android:id="@+id/register_email"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="#FFE5E5E5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_emailInput"
        app:layout_constraintStart_toStartOf="@+id/register_name" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="80dp"
        android:layout_height="61dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="104dp"
        android:text="@string/an"
        android:textAlignment="center"
        android:textColor="#E5E5E5"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title4"
        android:layout_width="197dp"
        android:layout_height="60dp"
        android:text="@string/account"
        android:textAlignment="center"
        android:textColor="#E5E5E5"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/instruct"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:text="@string/register_instructions"
        android:textAlignment="center"
        android:textColor="#B9AFAF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title4" />

    <EditText
        android:id="@+id/register_emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#E5E5E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_nameInput"
        app:layout_constraintTop_toBottomOf="@+id/register_nameInput" />

    <TextView
        android:id="@+id/register_username"
        android:layout_width="118dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/username"
        android:textAlignment="viewStart"
        android:textColor="#E5E5E5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/register_unameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruct" />

    <Button
        android:id="@+id/submitRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#FDA311"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>