<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#162B56">

        <ImageButton
            android:id="@+id/wlLogo4"
            android:layout_width="121dp"
            android:layout_height="73dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#00000000"
            android:contentDescription="wl logo"
            android:src="@drawable/wl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="88dp"
            android:layout_height="27dp"
            android:layout_marginTop="372dp"
            android:text="@string/name"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/fullName"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="87dp"
            android:layout_height="26dp"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/jdoeemail"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="168dp"
            android:layout_height="30dp"
            android:layout_marginTop="372dp"
            android:layout_marginEnd="60dp"
            android:text="@string/fullName"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jdoeemail"
            android:layout_width="166dp"
            android:layout_height="30dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="60dp"
            android:text="@string/jdoeemail"
            android:textColor="#E5E5E5"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:backgroundTint="#FDA311"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="280dp"
            android:layout_height="244dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/bigprofpic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>